[package]
name = "jito-speedtest"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
openssl = { version = "0.10.73", features = ["vendored"] }
reqwest = { version = "0.12.20", features = ["json"] }
self_update = { version = "0.42.0", features = [
    "rustls",
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "compression-zip-deflate",
    "compression-zip-bzip2",
] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }

[build-dependencies]
anyhow = "1.0.98"
vergen-git2 = { version = "1.0.7", features = [
    "build",
    "cargo",
    "rustc",
    "si",
] }
